--- a/styles/styles.module.css
+++ b/styles/styles.module.css
@@ -76,6 +76,7 @@
   top: 0;
   left: 0;
   right: 0;
+  width: 100vw;
   bottom: 0;
   border-radius: 10px;
   background-color: var(--dark-border);
@@ -100,6 +101,7 @@
   right: 0;
   height: 4.4rem;
   margin: 0;
+  padding: 0;
 }
 
 .globalNav li {
